@@ -1,3 +1,7 @@
+MailZu-ng 0.12.mailzu-ng-php72-ec22fcc+1 (13.12.2022)
+---------
+  - Corrected error messages.
+
 MailZu-ng 0.12.mailzu-ng-php72-6b7c25f+1 (12.12.2022)
 ---------
   - Merged administrators.
